--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,700;1,800&display=swap');
 
 
-.Manatal{
+.manatal{
   font-family: 'Newsreader', serif;
   &__headline{
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 2.0rem;
     line-height: 21px;
     color: #000000;
 
