add Detail.vue with vue router

--- a/src/styles/scss/Slider.scss
+++ b/src/styles/scss/Slider.scss
@@ -3,6 +3,9 @@
 
 .manatal-slider{
   &__card{
+    &-image{
+      border-bottom-right-radius: 24px;
+    }
     &-author{
       position: absolute;
       left: 16px;
