--- a/src/styles/scss/Slider.scss
+++ b/src/styles/scss/Slider.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,700;1,800&display=swap');
-
+@import "Mixin";
 
 .manatal-slider{
   &__card{
@@ -15,14 +15,13 @@
     }
 
     &-title{
+      @include manatal-title(700, 0,0, 20);
       position: absolute;
       left: 16px;
       top: 123px;
       color: #ffff;
       word-break: break-word;
       width: 280px;
-      font-size: 20px;
-      font-weight: 700;
       line-height: 21px;
     }
     &-desc{
