--- a/src/styles/scss/Detail.scss
+++ b/src/styles/scss/Detail.scss
@@ -12,6 +12,11 @@
         background: #FFFFFF;
         border-radius: 24px 24px 0 0;
         z-index: 0;
+
+        &-text{
+          max-width: 700px;
+          margin: 0 auto;
+        }
       }
 
       &__box{
