--- a/src/styles/scss/Slider.scss
+++ b/src/styles/scss/Slider.scss
@@ -1,10 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,700;1,800&display=swap');
 @import "Mixin";
+@import "media";
 
 .manatal-slider{
   &__card{
+    @include respond(xsmall) {
+      max-width: 100% !important;
+
+    }
+
+    @include respond(small) {
+      max-width: 100% !important;
+
+    }
+
+    @include respond(medium) {
+      max-width: 100% !important;
+
+    }
+
+    @include respond(large) {
+      max-width: 311px!important
+
+    }
+
+    @include respond(xlarge) {
+      max-width: 311px!important;
+
+    }
     &-image{
       border-bottom-right-radius: 24px;
+      @include respond(xsmall) {
+        width: 80vw;
+
+      }
+
+      @include respond(small) {
+        width: 80vw;
+
+      }
+
+      @include respond(medium) {
+        width: 80vw;
+
+      }
+
+      @include respond(large) {
+        width:100%;
+
+      }
+
+      @include respond(xlarge) {
+        width:100%;
+
+      }
     }
     &-author{
       position: absolute;
